# grey-cardinal

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Caddyfile  DAEMON_SETUP.md  DEMO.md  DEPLOY.md  Dockerfile.test  Makefile  README.md  README_AGENT_WINDOWS.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/audio-worker/: Dockerfile  README.md  pyproject.toml  requirements.txt  start-local.ps1
apps/audio-worker/scripts/: send_mock_wav.ps1
apps/audio-worker/src/audio_worker/: __init__.py  asr.py  brain_client.py  config.py  contracts.py  main.py
apps/audio-worker/tests/: test_audio_worker.py
apps/brain-api/: Dockerfile  Dockerfile.test  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/brain-api/alembic/: env.py
apps/brain-api/alembic/versions/: 0001_initial_v2.py  0002_drop_legacy_organizations.py  0002_p1_meetings.py  0003_desktop_first_audio.py  0003_device_link_codes.py  0004_user_accounts.py  0004_yougile_integration.py  0005_organizations.py  0005_team_board_provider_mock.py  0006_agentic_pm_system.py  0007_agentic_board_mirror.py  0007_telegram_link_codes.py  0008_relax_legacy_ai_inbox.py  0009_yandex_telemost.py  0010_reconcile_agentic_models.py  0011_final_v2_runtime_contracts.py  0012_task_comments.py  0013_share_links.py  0014_meeting_agent_recorder.py  0015_pending_chat_actions.py  0016_emotion_and_pet.py  0017_team_pet_full.py  0018_cross_team_projects.py  0019_task_source_metadata.py  0020_absence_delegate.py  0021_yougile_mapping_chat_message.py
apps/brain-api/alembic/versions_legacy/: 0001_initial.py  0004_user_accounts.py  0005_organizations.py  0006_chat_confirmation_mode.py  0007_telegram_link_codes.py
apps/brain-api/evals/: semantic_messages_ru.jsonl  task_understanding_cases_ru.jsonl
apps/brain-api/src/brain_api/: __init__.py  config.py  container.py  main.py
apps/brain-api/src/brain_api/api/: __init__.py  deps.py  rbac.py
apps/brain-api/src/brain_api/api/routes/: __init__.py  accounts.py  agentic_pm.py  agents.py  daemon.py  debug.py  desktop.py  grey_board.py  health.py  internal_audio.py  internal_telegram.py  meeting_agent.py  meetings.py  organizations.py  projects.py  public_api.py  session.py  share.py  tasks.py  team_pet.py  telemost.py  tgapp.py  v2_tenants.py  websocket.py  yougile.py  (+3 more)
apps/brain-api/src/brain_api/application/: __init__.py  agentic_tasks.py  board_mirror.py  config.py  dto.py  heuristic_semantic.py  pet_catalog.py  ports.py  project_context.py  reminder_policy.py  rendering.py  semantic_parser.py  task_numbering.py  task_status_service.py  team_mood.py  telemost_intent.py  text_policy.py
apps/brain-api/src/brain_api/demo/: __init__.py  agents.py  extractor.py  routes.py  store.py
apps/brain-api/src/brain_api/domain/: __init__.py  entities.py  enums.py  errors.py  services.py  value_objects.py
apps/brain-api/src/brain_api/infrastructure/: __init__.py
apps/brain-api/src/brain_api/integrations/: __init__.py  yandex_telemost.py
apps/brain-api/src/brain_api/telemost_worker/: __init__.py  base.py  factory.py  mock_worker.py
apps/brain-api/tests/: agentic_pm_test_utils.py  conftest.py  llm_fakes.py  test_absence_delegation.py  test_agent_recommendations.py  test_agentic_wellbeing.py  test_agents.py  test_ai_inbox.py  test_ai_inbox_contract_matches_frontend.py  test_audio_endpoints.py  test_authenticated_speaker_identity.py  test_bind_team_uses_bind_codes_table.py  test_board_credentials_encryption.py  test_board_mirror_create_move_close.py  test_bot_help_settings.py  test_bot_mentions_assignee.py  test_brain_internal_security.py  test_burnout_forecast.py  test_caddy_blocks_internal_routes.py  test_chat_task_actions.py  test_confirm_task.py  test_cross_team_projects.py  test_daemon_state.py  test_daemon_upload.py  test_demo_brain.py  test_desktop_device_registration.py  test_desktop_tasks_endpoint.py  test_desktop_transcript_ingest.py  test_duplicate_task_detection.py  test_employee_profile.py  test_external_openai_compatible_provider_groq.py  test_frontend_bot_mini_app.py  test_frontend_downloads_no_spa_fallback.py  test_frontend_no_internal_token.py  test_frontend_v2_contracts.py  test_gamification_service.py  test_grey_board_agent_view.py  test_grey_board_contract_matches_frontend.py  test_grey_board_people_view.py  test_grey_board_risk_view.py  (+76 more)
apps/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-app/src-tauri/capabilities/: default.json
apps/desktop-app/src-tauri/src/: lib.rs  main.rs
native/desktop-agent/: CMakeLists.txt  README.md  config.example.toml
native/desktop-agent/cmake/: PlatformOptions.cmake
native/desktop-agent/include/grey_cardinal_agent/: asr_provider.hpp  audio_capture.hpp  audio_frame.hpp  audio_metrics.hpp  audio_recorder.hpp  chunk_uploader.hpp  config.hpp  desktop_transcript.hpp  desktop_transcript_uploader.hpp  http_client.hpp  logger.hpp  uploader.hpp  wav_writer.hpp
native/desktop-agent/installer/windows/: grey-cardinal-agent.iss
native/desktop-agent/installer/windows/wix/: GreyCardinalDaemon.wxs
native/desktop-agent/package/linux/: README_DAEMON_LINUX.md  config.example.toml  grey-cardinal-daemon.service  smoke_upload_test.sh
native/desktop-agent/package/macos/: README_DAEMON_MACOS.md  com.greycardinal.daemon.plist  config.example.toml
native/desktop-agent/package/windows/: README_DAEMON_WINDOWS.md  config.example.toml  install_or_start.ps1  open_logs.ps1  smoke_upload_test.ps1
native/desktop-agent/platform/linux/: README.md  pipewire_audio_stub.hpp
native/desktop-agent/platform/macos/: README.md  screen_capture_audio_stub.hpp
native/desktop-agent/platform/windows/: wasapi_loopback_capture.cpp  wasapi_loopback_capture.hpp
native/desktop-agent/src/: asr_provider.cpp  audio_metrics.cpp  audio_recorder.cpp  chunk_uploader.cpp  config.cpp  desktop_transcript.cpp  desktop_transcript_uploader.cpp  http_client.cpp  logger.cpp  main.cpp  uploader.cpp  wav_writer.cpp
native/desktop-agent/src/tray/: tray.rc  tray_app.cpp
native/desktop-agent/tests/: core_tests.cpp
(+365 files in other folders)
