[package]
name = "grey-cardinal-desktop"
version = "0.1.0"
edition = "2021"
description = "Grey Cardinal Desktop — Tauri app shell"
authors = ["Grey Cardinal Team"]

[lib]
name = "grey_cardinal_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# process / path / time
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
# faster recompilation
incremental = true
